multi app fixes